--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,8 +13,9 @@
 	<meta http-equiv="content-language" content="en">
 
 	<!-- Fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Roboto:100,400' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+  <script src="https://use.typekit.net/rhb8ayt.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 	<!-- Bootstrap -->
 	<link href="css/main.css" rel="stylesheet">
