link to maps, iban fix, zoom fix

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
 	<meta name="robots" content="index, follow">
 	<meta http-equiv="content-language" content="en">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
 	<!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   <script src="https://use.typekit.net/rhb8ayt.js"></script>
