--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,16 @@ p {
   font-weight: 500;
 }
 
+a {
+  color:  $font-color;
+  &:hover {
+    color: $green;
+  }
+  &:visited {
+    color: $magenta;
+  }
+}
+
 .button {
   border: none;
   border-radius: 0;
@@ -73,17 +83,26 @@ p {
 
 // GOOGLE MAPS
 .map-container {
-	width: 100%;
+//	width: 100%;
   box-shadow: 5px 5px $green;
   margin: 56px auto;
 }
 .map-container iframe{
-	width: 100%;
+/*	width: 100%;
 	display: block;
 	pointer-events: none;
 	position: relative; /* IE needs a position other than static */
 }
 .map-container iframe.clicked{
-	pointer-events: auto;
+//	pointer-events: auto;
 }
 
+.overlay {
+/*  
+  background:transparent;
+  position:relative;
+  width:100%;
+  height:300px; /* your iframe height */
+//  top:300px; /* your iframe height */
+//  margin-top:-300px; /* your iframe height */
+}
